--- a/pod.yaml
+++ b/pod.yaml
@@ -3,10 +3,10 @@ kind: Pod
 metadata:
   name: helloworld
   labels:
-    app: helloworld
+    name: helloworld
 spec:
-  containers: 
+  containers:
   - name: helloworld
     image: soumyadeep90014842/helloworld:1.0.0
     ports:
-    - containerPort: 8081
+      - containerPort: <Port>
