--- a/pod.yaml
+++ b/pod.yaml
@@ -1,12 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: helloworld
-  labels:
-    name: helloworld
+  name: nginx
 spec:
   containers:
-  - name: helloworld
-    image: soumyadeep90014842/helloworld:1.0.0
+  - name: nginx
+    image: nginx:1.14.2
     ports:
-      - containerPort: <Port>
+    - containerPort: 80
