--- a/pod.yaml
+++ b/pod.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  name: helloworld
 spec:
   containers:
-  - name: nginx
-    image: nginx:1.14.2
+  - name: helloworld
+    image: soumyadeep90014842/helloworld:1.0.0
     ports:
-    - containerPort: 80
+    - containerPort: 8081
