--- a/pod.yaml
+++ b/pod.yaml
@@ -4,6 +4,9 @@ metadata:
   name: helloworld
 spec:
   containers:
+    env:
+      - name: SECRET
+        value: This is the secret from pod spec
   - name: helloworld
     image: soumyadeep90014842/helloworld:1.0.0
     ports:
